--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -29,6 +29,7 @@
         </activity>
         <activity
             android:name=".SignUpActivity"
+            android:label="Sign Up"
             android:theme="@style/AppTheme.Dark" />
         <activity
             android:name=".ProfileActivity"
@@ -42,7 +43,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".HomeActivity" />
         </activity>
-        <activity android:name=".CommentActivity"></activity>
+        <activity android:name=".CommentActivity"
+            android:label="Comments"
+            ></activity>
     </application>
 
 </manifest>
